records og edre feilhåndtering i rest-klienter (#881)
Co-authored-by: Jan-Olav Eide <jan-olav.eide@nav.no>